# Agent-complexity

./: .dockerignore  .env.example  .gitignore  .gitmodules  Makefile  PAPER2SKILLS_4ARM_MATRIX.md  PAPER2SKILLS_AGENT_QUERY_DESIGN.md  PAPER2SKILLS_BINARY_RESULTS.md  PAPER2SKILLS_CASE_STUDY.md  PAPER2SKILLS_COMPLETE_INDEX.md  PAPER2SKILLS_COMPLETE_RESULTS.md  PAPER2SKILLS_COMPREHENSIVE_ANALYSIS.md  PAPER2SKILLS_DEEP_ANALYSIS.md  PAPER2SKILLS_DIFFERENTIATED_MATRIX.md  PAPER2SKILLS_DIFFERENTIATED_V2.md  PAPER2SKILLS_EXPERIMENT_ANALYSIS.md  PAPER2SKILLS_EXPERIMENT_COMPLETE.md  PAPER2SKILLS_EXPERIMENT_RUNBOOK.md  PAPER2SKILLS_FINAL_REPORT.md  PAPER2SKILLS_FINAL_REPORT_V2.md  PAPER2SKILLS_FINAL_RESULTS.md  PAPER2SKILLS_FINAL_STATUS.md  PAPER2SKILLS_NEW_TASKS_EXPERIMENT_SUMMARY.md  PAPER2SKILLS_PAPER_WORSE_ANALYSIS.md  PAPER2SKILLS_PASSRATE_SUMMARY.md  PAPER2SKILLS_READY_TO_RUN.md  PAPER2SKILLS_REDESIGN_PROPOSAL.md  PAPER2SKILLS_REPAIR_COMPLETE.md  PAPER2SKILLS_REPAIR_PLAN.md  PAPER2SKILLS_STORY_DESIGN.md  PAPER2SKILLS_TASK_BLUEPRINT.md  PAPER2SKILLS_TIERA_STATUS.md  PAPER2SKILLS_TIER_B_BLUEPRINT.md  PAPER2SKILLS_WORKSPACE_INDEX.md  PAPER_SKILLS_LIBRARY_STATUS_REPORT.md  PROJECT_INTRO_PAPER2SKILLS_ZH.md  README.md  pyproject.toml
agentic_complexity_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
common/: settings.py
config/: batch_paper2skills_v1.yaml
front/: README.md  docker-compose.yml
main/: .env.example  .gitignore  WORKFLOW_FINISH_DIFFERENCES.md  skills-lock.json
paperskills/: .gitignore  PAPERS_EXTRACTED.md  (+2 more)
(+7679 files in other folders)
